--- a/Image_creation_tutorial.ipynb
+++ b/Image_creation_tutorial.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "## Python code for iceberg detection in SAR data\n",
     "\n",
-    "Note that the paths will need to be changed to fit the individual folder structure"
+    "Note that the paths will need to be changed to fit the individual folder structure\n",
+    "\n",
+    "This code was developed by Johnson Bailey, John Stott and Matthew Chan"
    ]
   },
   {
